<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ GNU General Public License v3.0
  ~
  ~ Copyright (c) 2021 Toh Jeen Gie Keith
  ~
  ~
  ~ This file is part of Ohms Now!.
  ~
  ~ Ohms Now! is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Ohms Now! is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Ohms Now!.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tolerance_band_none"
        android:title="@string/tolerance_band_none" />

    <item
        android:id="@+id/tolerance_band_sliver"
        android:title="@string/tolerance_band_silver" />

    <item
        android:id="@+id/tolerance_band_gold"
        android:title="@string/tolerance_band_gold" />

    <item
        android:id="@+id/tolerance_band_brown"
        android:title="@string/tolerance_band_brown" />

    <item
        android:id="@+id/tolerance_band_red"
        android:title="@string/tolerance_band_red" />

    <item
        android:id="@+id/tolerance_band_orange"
        android:title="@string/tolerance_band_orange" />

    <item
        android:id="@+id/tolerance_band_yellow"
        android:title="@string/tolerance_band_yellow" />

    <item
        android:id="@+id/tolerance_band_green"
        android:title="@string/tolerance_band_green" />

    <item
        android:id="@+id/tolerance_band_blue"
        android:title="@string/tolerance_band_blue" />

    <item
        android:id="@+id/tolerance_band_violet"
        android:title="@string/tolerance_band_violet" />

    <item
        android:id="@+id/tolerance_band_grey"
        android:title="@string/tolerance_band_grey" />
</menu>